<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_product">
    <data>
        <import type="android.view.View"/>
        <variable
            name="product"
            type="com.example.zadaniebazydanych.model.Product" />
    </data>
...
        android:text="@{product.name + ` - ` + product.category.name}"
        android:textSize="25dp"
        android:paddingLeft="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/product_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="16dp"
        android:text="@{product.desc}"
        android:textStyle="italic" />
...
